# Where-is-your-mask

./: README.md
api/: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
api/app/: main.py
api/app/core/: config.py  mongo.py
api/app/features/collections/: models.py  router.py  service.py
api/app/features/configuration/: models.py  router.py  service.py
api/app/features/images/: __init__.py  router.py  service.py
api/app/features/orders/: models.py  router.py  service.py
api/app/features/review/: review.py  router.py
api/app/features/users/: __init__.py  models.py  router.py  service.py
api/app/models/common/: Model.py  ObjectId.py  __init__.py
api/src/: main.py
api/src/core/: config.py  mongo.py
client/: .env  .prettierrc  README.md  package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/core/: ProtectedPage.js  api.js  cart.js  config.js  currentModel.js  images.js  notification.js  orderStatus.js  storage.js  user.js
client/src/pages/: CartPage.js  CollectionListPage.js  CollectionPage.js  IndexPage.js  ModelReviewPage.js  ModelingConfigurationPage.js  PaymentPage.js
client/src/shared/: CollectionsList.js  Image.js  ImageDropzone.js
client/src/theme/: icons.js  theme.js
dump/admin/: system.version.metadata.json
dump/where-is-your-mask/: collections.bson  collections.metadata.json  configuration.bson  configuration.metadata.json  fs.chunks.metadata.json  fs.files.bson  fs.files.metadata.json  images.bson  images.metadata.json  users.bson  users.metadata.json
(+64 files in other folders)
