[tool.poetry]
name = "where-is-your-mask-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
pymongo = "^4.0.1"
python-decouple = "^3.6"
python-multipart = "^0.0.5"
uuid = "^1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
